--- a/src/fe/pages/game-layout.css
+++ b/src/fe/pages/game-layout.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.3cqw 2cqw 0.85cqw;
+  padding: 0.3cqw 2cqw;
   flex-shrink: 0;
 }
 
@@ -25,7 +25,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-self: center;
   max-width: 40%;
   width: 100%;
   height: 100%;
