--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 1cqw 0 0.5cqw;
+    padding: 0;
   }
 
   body.is-mobile {
